--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi>=0.68.0,<0.69.0
-pydantic>=1.8.0,<2.0.0
-uvicorn>=0.15.0,<0.16.0
-scikit-learn>=1.3.1
-catboost>=1.2.2
+pydantic==1.10.20
+fastapi==0.68.0
+uvicorn>=0.15.0
+
+catboost==1.2.7
+scikit-learn==1.6.0
